--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -26,7 +26,7 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: 640px;
+    max-width: 480px;
     width: 100%;
     padding: 20px;
 }
@@ -36,9 +36,11 @@ body {
 }
 
 ul.contact {
-    max-width: 190px;
-    margin: 50px auto 0 auto;
-    padding: 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 20px;
+    width: 100%;
     list-style-type: none;
 }
 
@@ -46,6 +48,10 @@ ul.contact li {
     display: block;
     text-align: left;
     margin-bottom: 10px;
+}
+
+ul.contact li:last-child {
+    margin-bottom: 0;
 }
 
 ul.contact li i.icon {
@@ -80,20 +86,30 @@ i.icon.is-website {
     direction: rtl;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 400px) {
     ul.contact {
-        max-width: 370px;
-        padding-left: 0;
+        padding: 20px 0;
+        text-align: center;
     }
-
     ul.contact li {
         display: inline-block;
         margin-right: 20px;
         margin-bottom: 0;
         text-align: center;
     }
-
     ul.contact li:last-child {
         margin-right: 0;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    ul.contact {
+        padding: 20px;
+        text-align: left;
+    }
+}
+@media only screen and (min-width: 960px) {
+    .centered {
+        max-width: 640px;
     }
 }
